# mcp-juridico-brasil

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish-mcp-registry.yml  publish.yml  welcome.yml
docs/: PESQUISA.md  PLANO-E2E.md
scripts/: check_release_metadata.py
src/mcp_juridico_brasil/: __init__.py  cli.py  server.py
src/mcp_juridico_brasil/_core/: __init__.py  config.py  errors.py  http.py  logging.py
src/mcp_juridico_brasil/comercial/: __init__.py  providers.py  registry.py  webhook.py
src/mcp_juridico_brasil/datajud/: __init__.py  client.py  provider.py  tribunais.py
src/mcp_juridico_brasil/dje/: __init__.py  client.py  provider.py  schemas.py  tools.py
src/mcp_juridico_brasil/monitoramento/: __init__.py  store.py  tools.py
src/mcp_juridico_brasil/movimentacoes/: __init__.py  tools.py
src/mcp_juridico_brasil/prazo/: __init__.py  calendario.py  tools.py
src/mcp_juridico_brasil/processo/: __init__.py  tools.py
src/mcp_juridico_brasil/resumo/: __init__.py  tools.py
src/mcp_juridico_brasil/shared/: __init__.py  schemas.py  validators.py
tests/: test_comercial_providers.py  test_comercial_registry.py  test_comercial_webhook.py  test_datajud_client.py  test_dje.py  test_monitoramento_store.py  test_prazo_calendario.py  test_smoke.py  test_tools.py  test_validators.py
